# DSLR

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml  tests.yml
dslr/: cli.py  config.py  console.py  operations.py  pg_client.py  runner.py
tests/: test_cli.py
