[project]
name = "DSLR"
version = "0.4.0"
description = "Take lightning fast snapshots of your local Postgres databases."
readme = "README.md"
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
authors = [
    {name = "Mitchel Cabuloy", email = "mixxorz@gmail.com"},
]
keywords = [
    "database",
    "snapshot",
    "backup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "click~=8.1.8",
    "rich~=13.9.4",
    "timeago~=1.0.16",
    "tomli~=2.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
    "ipdb<1.0.0,>=0.13.9",
    "psycopg[binary]>=3.2.6",
    "tox<4.0.0,>=3.25.1",
    "twine<5.0.0,>=4.0.1",
]

[project.urls]
homepage = "https://github.com/mixxorz/DSLR"
repository = "https://github.com/mixxorz/DSLR"

[project.scripts]
dslr = "dslr.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = []

# https://github.com/charliermarsh/ruff#ruff
[tool.ruff.lint]
select = [
    'C', # flake8-comprehensions
    'B', # flake8-bugbear
    'E', # pycodestyle errors
    'F', # pyflakes
    'I', # iSort
    'W', # pycodestyle warnings
]
