[tool.poetry]
name = "DSLR"
version = "0.5.0"
description = "Take lightning fast snapshots of your local Postgres databases."
authors = ["Mitchel Cabuloy <mixxorz@gmail.com>"]
license = "MIT"
keywords = ["database", "snapshot", "backup"]
readme = "README.md"
homepage = "https://github.com/mixxorz/DSLR"
repository = "https://github.com/mixxorz/DSLR"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
rich = "^12.5.1"
timeago = "^1.0.15"
tomli = "^2.0.1"
psycopg2 = { version = "^2.9.3", optional = true }
psycopg2-binary = { version = "^2.9.3", optional = true }
psycopg = { version = "^3.1.14", optional = true }

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
psycopg2-binary = ["psycopg2-binary"]
psycopg = ["psycopg"]

[tool.poetry.group.dev.dependencies]
isort = "^5.11.5"
flake8 = "^7.3.0"
black = "^22.6.0"
ipdb = "^0.13.9"
tox = "^4"
twine = "^4.0.1"

[tool.poetry.scripts]
dslr = "dslr.cli:cli"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
