[project]
name = "DSLR"
version = "0.6.0"
description = "Take lightning fast snapshots of your local Postgres databases."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Mitchel Cabuloy", email = "mixxorz@gmail.com"},
]
keywords = [
    "database",
    "snapshot",
    "backup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "click>=8.1.3,<9",
    "rich>=13.8.1,<14",
    "timeago>=1.0.15,<2",
    "tomli>=2.0.1,<3; python_version < '3.11'",
]

[project.optional-dependencies]
psycopg2 = ["psycopg2>=2.9.3,<3"]
psycopg2-binary = ["psycopg2-binary>=2.9.3,<3"]
psycopg = ["psycopg>=3.1.14,<4"]

[project.urls]
homepage = "https://github.com/mixxorz/DSLR"
repository = "https://github.com/mixxorz/DSLR"

[project.scripts]
dslr = "dslr.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.402",
    "ipdb>=0.13.9,<1",
    "pre-commit>=4.5.1",
    "tox>=4,<5",
    "twine>=4.0.1,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = []

[tool.pyright]
reportMissingImports = false

[tool.ruff.lint]
select = [
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]
